# device_detector

./: .gitignore  pyproject.toml
.github/workflows/: pytest.yml
device_detector/: __init__.py
device_detector/parser/: __init__.py
device_detector/parser/client/: __init__.py  extractor_whole_name.py
device_detector/parser/device/: __init__.py  device.py
device_detector/tests/parser/: test_clients.py  test_key_value_pairs.py
