[tool.poetry]
name = "device-detector"
version = "6.1.5"
description = "Python3 port of matomo's Device Detector"
authors = ["Dave Burkholder <dave@thinkwelldesigns.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "device_detector"}]

classifiers = [
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
PyYAML = "^6.0.1"
regex = "^2023.8.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-xdist = "^3.3.1"
ruff = "^0.0.287"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]